# xixero

./: .gitignore  .goreleaser.yml  ADMIN-PLAN.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  DEVELOPMENT.md  IMPLEMENTATION.md  Makefile  PLANNER.md  README.md  SECURITY.md  go.mod  go.sum  package.json  pnpm-lock.yaml  release.bat  start.bat  vite.config.ts
.github/workflows/: build.yml  deploy-ui.yml  release.yml
.wolf/: anatomy.md  cerebrum.md  identity.md  token-ledger.json
cmd/xixero/: main.go
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PROJECT_PLAN.md
installer/: build.bat  go.mod  main.go
internal/admin/: server.go
internal/api/: handlers.go
internal/config/: config.go
internal/license/: enforcer.go  license.go
internal/models/: models.go
internal/provider/: enowx.go  openai.go  provider.go  registry.go  trae.go
internal/proxy/: proxy.go  proxy_test.go
internal/server/: middleware.go  ratelimit.go  server.go
internal/store/: license_store.go  store.go  usage_store.go
internal/tunnel/: cloudflare.go  github_sync.go
internal/update/: update.go
pkg/utils/: crypto.go
scripts/: install.ps1
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  hwid.rs  mod.rs  proxy.rs
src-tauri/src/config/: mod.rs  schema.rs
src-tauri/src/proxy/: mod.rs  router.rs  server.rs  streaming.rs  transform.rs
src/lib/: firebase.ts  license.ts  stores.svelte.ts  tauri.ts
src/routes/: +layout.svelte  +page.svelte
web-ui/: package-lock.json  package.json  vite.config.js
(+24 files in other folders)
