[package]
name = "xixero"
version = "0.1.0"
description = "Xixero - Local AI Reverse Proxy"
authors = ["jinkaka98"]
license = "MIT"
repository = "https://github.com/jinkaka98/xixero"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "xixero_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime & HTTP
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
hyper-tls = "0.6"
bytes = "1"

# TLS
native-tls = "0.2"
tokio-native-tls = "0.3"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
machine-uid = "0.5"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Config encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
